fixed spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -119,10 +119,11 @@ a:hover {
 
 .linkedin {
     margin-left: 200px;
+    
 }
 
 .github {
-    margin-left: 235px;
+    margin-left: 245px;
 }
 
 .rules {
@@ -132,23 +133,28 @@ a:hover {
     font-size: 16px;
 }
 
+#song-rule {
+    margin-top: 490px;
+    position: absolute;
+}
+
 #top-rule {
-    margin-top: 500px;
+    margin-top: 530px;
     position: absolute;
 }
 
 #bottom-rule {
-    margin-top: 540px;
+    margin-top: 570px;
     position: absolute;
 }
 
 #fourth-rule {
-    margin-top: 580px;
+    margin-top: 610px;
     position: absolute;
 }
 
 #third-rule {
-    margin-top: 630px;
+    margin-top: 660px;
     position: absolute;
     font-size: 24px;
 }
